# windeep-computer-control

./: .gitignore  README.md  VOCABULARY.md  compress_image.py  computer_control_enhanced.py  create_ppt.py  energy_regulator.py  energy_state.json  pyproject.toml  winctl_mcp_adapter.py  winctl_mcp_server.py
scripts/: __init__.py  action_queue.py  assertion_verifier.py  clipboard_guard.py  direct_path.py  dxgi_capture.py  element_fingerprint.py  install_headless.ps1  layout_knowledge.py  make_ppt.py  ocr_finder.py  resilient_matcher.py  sendinput.py  shared_ui_state.py  smart_matcher.py  test_windeep_integration.py  ui_tree_cache.py
tests/: test_compress_image.py
windeep/: __init__.py  __main__.py  cli_main.py  core.py
